# rofi-bitwarden

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  install.sh  rebuild.sh  rofi-bitwarden-helper  sudo-install.sh
.github/workflows/: build.yml
src/: rofi-rbw.c
